Subdivide Curve Node: Shifts First Point Position #92180

Closed
opened 2021-10-13 13:59:36 +02:00 by Julio Cargnin Pereira · 6 comments

System Information
Operating system: Linux-5.13.0-7614-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-12 22:43, hash: 53af51ad50
Worked: (newest version of Blender that worked as expected)

Short description of error
When subdivide a curve in geometry nodes the first point of the list gets shifted towards the direction of the curve live.

Exact steps for others to reproduce the error
Add a Curve Line > give a direction > add a Subdivide Curve > noticed how the first segments of the line get shifted and are not tight to the starting position defined earlier. This does not happen when using Mesh Line > Subdivide Mesh which is the desired behavior.

Short Video
subfivide-curve-broken.mp4

Sample File
#92180.blend

**System Information** Operating system: Linux-5.13.0-7614-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-12 22:43, hash: `53af51ad50` Worked: (newest version of Blender that worked as expected) **Short description of error** When subdivide a curve in geometry nodes the first point of the list gets shifted towards the direction of the curve live. **Exact steps for others to reproduce the error** Add a Curve Line > give a direction > add a Subdivide Curve > noticed how the first segments of the line get shifted and are not tight to the starting position defined earlier. This does not happen when using Mesh Line > Subdivide Mesh which is the desired behavior. **Short Video** [subfivide-curve-broken.mp4](https://archive.blender.org/developer/F11050273/subfivide-curve-broken.mp4) **Sample File** [#92180.blend](https://archive.blender.org/developer/F11060765/T92180.blend)

Added subscriber: @CosmoMidias

Added subscriber: @CosmoMidias

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey self-assigned this 2021-10-13 21:24:21 +02:00
Member

Thanks for the report! Fix incoming

Thanks for the report! Fix incoming

This issue was referenced by 1ae79b704a

This issue was referenced by 1ae79b704a6f38adb1b5dfa35ed3f1e338a05f33
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92180
No description provided.