Fix T92180: Curve subdivide incorrect result for poly splines

The node shifted all new points forward in the spline, so the first
point would appear to be removed.